Thought you could mix cases into one... was wrong

--- a/JavaScript-ECMAScript/messing around/index.html
+++ b/JavaScript-ECMAScript/messing around/index.html
@@ -17,19 +17,20 @@
                  <!-- userName = prompt("What is your name?", ""); -->
              <!-- } -->
     <!-- </script> -->
-    <script>
+    <!-- <script> -->
        
-        let name;
-        while (true) {
-            name = prompt("What is your name?", "");
-            if (name === "Admin") {
-                alert("Welcome");
-                break; // Exit the loop if the name is "Admin"
-            } else {
-                alert("Access denied");
-            }
-        }
+        <!-- let name; -->
+        <!-- while (true) { -->
+            <!-- name = prompt("What is your name?", ""); -->
+            <!-- if (name === "Admin") { -->
+                <!-- alert("Welcome"); -->
+                <!-- break; // Exit the loop if the name is "Admin" -->
+            <!-- } else { -->
+                <!-- alert("Access denied"); -->
+            <!-- } -->
+        <!-- } -->
          
-    </script>
+    <!-- </script> -->
+<script src="switchtesting.js"></script>
 </body>
 </html>
