Maybe I am too dumb for this

--- a/JavaScript-ECMAScript/javascript info tasks/index.html
+++ b/JavaScript-ECMAScript/javascript info tasks/index.html
@@ -7,6 +7,6 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <script src="Rewrite If into a Switch/rewriteifintoswitch.js"></script>
+    <script src="Output prime numbers/script.js"></script>
     </body>
 </html>
