--- a/JavaScript-ECMAScript/messing around/index.html
+++ b/JavaScript-ECMAScript/messing around/index.html
@@ -31,6 +31,6 @@
         <!-- } -->
          
     <!-- </script> -->
-<script src="switchtesting.js"></script>
+<script src="primeweirdexample.js"></script>
 </body>
 </html>
