--- a/JavaScript-ECMAScript/self testing/index.html
+++ b/JavaScript-ECMAScript/self testing/index.html
@@ -22,6 +22,9 @@
             This Html5's purpose is to load some scripts && test them while not needing to create countless test folders and Html5 files.
         </p>
     <!-- <script src="forpossibleloop.js"></script> -->
-    <script src="basickeepvalueidea.js"></script>
+    <!-- <script src="basickeepvalueidea.js"></script> -->
+    <!-- <script src="questioninsteadifelse.js"></script> -->
+    <!-- <script src="functionExpressionTest.js"></script> -->
+    <script src="anothertestfor.js"></script>
     </body>
 </html>
