--- a/JavaScript-ECMAScript/self testing/index.html
+++ b/JavaScript-ECMAScript/self testing/index.html
@@ -25,6 +25,7 @@
     <!-- <script src="basickeepvalueidea.js"></script> -->
     <!-- <script src="questioninsteadifelse.js"></script> -->
     <!-- <script src="functionExpressionTest.js"></script> -->
-    <script src="anothertestfor.js"></script>
+    <!-- <script src="anothertestfor.js"></script> -->
+    <script src="firstRNGTesting.js"></script>
     </body>
 </html>
