--- a/JavaScript-ECMAScript/freecodecamp.org/index.html
+++ b/JavaScript-ECMAScript/freecodecamp.org/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <script src="messingArround.js"></script>
+    <!-- <script src="messingArround.js"></script> -->
+    <script src="ES6.js"></script>
     </body>
 </html>
