--- a/JavaScript-ECMAScript/messing around/index.html
+++ b/JavaScript-ECMAScript/messing around/index.html
@@ -31,6 +31,7 @@
         <!-- } -->
          
     <!-- </script> -->
-<script src="primeweirdexample.js"></script>
+<!-- <script src="primeweirdexample.js"></script> -->
+<script src="for loop trolling/script.js"></script>
 </body>
 </html>
