--- a/JavaScript-ECMAScript/freecodecamp.org/index.html
+++ b/JavaScript-ECMAScript/freecodecamp.org/index.html
@@ -9,6 +9,7 @@
     <body>
     <!-- <script src="basicJavaScriptPractices.js"></script> -->
     <!-- <script src="messingArround.js"></script> -->
-    <script src="ES6.js"></script>
+    <!-- <script src="ES6.js"></script> -->
+    <script src="basicAlgorithmScripting.js"></script>
     </body>
 </html>
