--- a/JavaScript-ECMAScript/self testing/self impossed exercises/index.html
+++ b/JavaScript-ECMAScript/self testing/self impossed exercises/index.html
@@ -39,5 +39,69 @@
         **Exercise 10: Search and Filter Objects**
         Write a function that looks through an array of objects and returns an array of objects that match specific name and value pairs from a source object. Hint: Use the `filter` method and `Object.keys` to compare name and value pairs in objects.
         
+
+        And a battery of 20 more:
+
+        Exercise 1: Filter Positive Numbers
+        Filter out positive numbers from an array of integers.
+
+        Exercise 2: Find Maximum Value
+        Find the maximum value in an array of numbers.
+
+        Exercise 3: Remove Duplicates
+        Remove duplicate elements from an array.
+
+        Exercise 4: Filter by Property
+        Given an array of objects, filter those objects that have a specific property.
+
+        Exercise 5: Map to Another Property
+        Given an array of objects, create a new array with a specific property of each object.
+
+        Exercise 6: Object Transformation
+        Transform an array of objects by adding or modifying a property.
+
+        Exercise 7: Count Occurrences
+        Count the number of occurrences of each element in an array and return the results as an object.
+
+        Exercise 8: Find Object by Property Value
+        Given an array of objects, find an object with a specific property value.
+
+        Exercise 9: Merge Objects
+        Merge multiple objects into a single object.
+
+        Exercise 10: Filter Object by Multiple Properties
+        Given an array of objects, filter objects that match multiple property conditions.
+
+        Exercise 11: Group by Property
+        Group an array of objects by a specific property into an object where keys are property values.
+
+        Exercise 12: Calculate Average Property Value
+        Calculate the average value of a specific property in an array of objects.
+
+        Exercise 13: Object Sorting
+        Sort an array of objects based on a specific property.
+
+        Exercise 14: Flatten Nested Objects
+        Flatten a nested object into a single-level object.
+
+        Exercise 15: Search and Replace Property
+        Search for objects with a specific property value and replace it with a new value.
+
+        Exercise 16: Deep Copy an Object
+        Create a deep copy of a nested object.
+
+        Exercise 17: Object Validation
+        Validate objects based on specific criteria and filter out invalid ones.
+
+        Exercise 18: Calculate Object Property Sum
+        Calculate the sum of a specific property in an array of objects.
+
+        Exercise 19: Nested Object Mapping
+        Map properties of a nested object into a new structure.
+
+        Exercise 20: Advanced Object Manipulation
+        Perform a complex operation on an array of objects, involving filtering, mapping, and merging based on multiple conditions.
+
+
     </body>
 </html>
